<resources>
    <string name="app_name">Doorish</string>
    <string name="thumbnail_image_view_desc">Youtube Video thumbnail image view</string>
    <string name="app_title">Doorish</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_landing_page">LandingPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_products">Products</string>
    <string name="menu_slideshow">Orders</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_gallery">Gallery</string>
    <string name="title_activity_splash">Splash</string>
    <string name="Terms_Body_1">Doorish is just a platform which can be used by the sellers or manufacturers or service providers etc. Whoever so qualifies, can use this platform as goods or services provider. While using this platform company expects from you that-\n a. User will not use this platform to spread false news or products or services.\n b. User will not do any such activities which infringe privacy policy of the customer or company or any other entities. \nc. User will not do any such activities which will infringe Intellectual Property right of any person or entity. \nd. User will not sell any product or provide any service which goes against the rights of the company or benefits of the customers. \ne. User will not do any false promises to the company or to the customers. \nf. User can\'t send wrong products or give bad services to the customers.</string>
    <string name="terms_Body2">In the time of huge competition in the market because of online selling, Doorish gives you the double opportunity of increasing your customer reach and maximize your business not just by attracting customers online but also via offline mode.\n \n It gives you wings and strengthen you to maximize your business and profit in this huge competitive market. Here you can attract customers offline through Mr.City and can reach pan India customers through online selling. To avail these benefits you have to follow some basic procedure of creating an user\'s account, listing products or services etc, giving appropriate details about the same etc. User have to furnish details like name of the business, owner\'s name and his/her details, PAN, GST, Account\'s details for payment settlement etc.\n\n or else documents whichever may be asked by the company at the time of creating account or even further at the time of need. After furnishing all details and we will verify your documents and you will get your account ready for further use. (Account\'s verification may take 2-4 working days)</string>
    <string name="Terms_body_3">Orders received for online shipping or Mr.City\'s must be prepared to dispatch by the user within 2-3 hours if its from the same city. If it\'s from the different city product should be ready within 24 hours. After making it ready to dispatch, user has to be notified to the delivery department under seller\'s portal.\n\n Customers buying things at the shop through Mr.City section, user have to handover the product in Doorish\'s bag only.\n\n So do order packages keeping this in mind for smooth functioning and better service because user can\'t fulfill products without Doorish\'s packaging bag or box.</string>
    <string name="Privacy_Policy_1">THIS PRIVACY POLICY IS AN ELECTRONIC RECORD IN THE FORM OF AN ELECTRONIC CONTRACT FORMED UNDER THE INFORMATION TECHNOLOGY ACT, 2000 AND THE RULES MADE THEREUNDER AND THE AMENDED PROVISIONS PERTAINING TO ELECTRONIC DOCUMENTS/ RECORDS IN VARIOUS STATUTES AS AMENDED BY THE INFORMATION TECHNOLOGY ACT. 2000. THIS PRIVACY POLICY DOES NOT REQUIRE ANY PHYSICAL, ELECTRONIC OR DIGITAL SIGNATURE.</string>
    <string name="Privacy_policy_2">Doorish Private Limited (hereinafter \'Doorish\' )recognizes the importance of privacy of its users and also of maintaining confidentiality of the information provided by its users as a responsible data controller and data processer.\n\n This Privacy Policy provides for the practices for handling and securing user\'s Personal Information (defined hereunder) by Doorish and its subsidiaries and affiliates.\n\n This Privacy Policy is applicable to any person (\'User\') who uses Doorish\'s customer interface channels including its website, mobile site and mobile app including call centres and offices (collectively referred herein as \' Website \') and agree to be bound by the terms and conditions of this Privacy Policy. You expressly consent to our use and disclosure of personal information provided by you in accordance with this Privacy Policy. If you disagree with this Privacy Policy please do not use or access our Website This Privacy Policy is incorporated into and subject to the Terms of Use.\n\n For the purpose of this Privacy Policy, wherever the context so requires \'you/ You\' or \' your/ Your\' shall mean User and the term \' We\', \' us/ Us\', \' our/ Our\' shall mean Doorish. For the purpose of this Privacy Policy, Website means Doorish\'s website (s), mobile site (s) and mobile app (s). This Privacy Policy does not apply to any website (s). mobile sites and mobile apps of third parties, even if their websites/ products are linked to our Website. User should take note that information and privacy practices of Doorish\'s business partners, advertisers, sponsors or other sites to which Doorish provides hyperlink (s) .may be materially different from this Privacy Policy. Accordingly. it is recommended that you review the privacy statements and policies of any such third parties with whom they interact.\n\n This Privacy Policy is an integral part of your Terms of Use with Doorish and all capitalized terms used, but not otherwise defined herein, shall have the respective meanings as ascribed to them in the Terms of Use.\n\n By using the Website and/ or by providing your information, You consent to the collection and use of the information you disclose on the Website in accordance with this Privacy Policy, including but not limited to Your consent for sharing your information as per this privacy policy. If you disclose any personal information relating to other people to us, you represent that you have the authority to do so and to permit us to use the information in accordance with this Privacy Policy.</string>
    <string name="Privacy_policy_3">The information as detailed below is collected for us to be able to provide the services chosen by you and also to fulfil our legal obligations as well as our obligations towards third parties as per our Terms of Use\n\n * Personal Information of User shall include the information shared by the User and collected by us for the following purposes Registration on the Website: Information which you provide while subscribing to or registering on the Website, including but not limited to information about your personal identity such as name, gender, marital status, religion, age etc., your contact details such as your email address, postal addresses, telephone (mobile or otherwise) and/ or fax numbers and any other information relating to your income and/ or lifestyle: billing information payment history etc. (as shared by you). Other information: We many also collect some other information and documents including but not limited to:\n\n Transactional history (other than banking details) about your e-commerce activities, buying behaviour. Your usernames, passwords, email addresses and other security-related information used by you in relation to our Services. Data either created by you or by a third party and which you wish to store on our servers such as image files, documents etc. Data available in public domain or received from any third party including social media channels. including but not limited to personal or non personal information from your linked social media channels (like name, email address, friend list, profile pictures or any other information that is permitted to be received as per your account settings) as a part of your account information. Information pertaining to any other person for who you make a purchase through your registered Doorish account. In such case, you must confirm and represent that each of the other person for whom a purchase has been made, has agreed to have the information shared by you disclosed to us and further be shared by us with the concerned service provider (s).</string>
    <string name="my_orders">My orders</string>
    <string name="answer">Answer</string>
    <string name="question">Question</string>
    <string name="expand_faq">expand_faq</string>
    <string name="refer_and_earn_rewards">Earn ₹20!</string>
    <string name="referral_code">Referral Code :</string>
    <string name="refer_and_earn">Refer and Earn</string>
    <string name="skip">Skip</string>
    <string name="txt_login"><b>Log in / Sign up</b></string>
    <string name="claim_reward">Submit</string>
    <string name="enter_referral_code">Enter Referral Code</string>
    <string name="sorry_we_can_t_reach_your_account">Sorry we can\'t reach your account!</string>
    <string name="your_account_is_disabled">Your account is disabled</string>
    <string name="go_to_login_page">Go to Login page</string>
    <string name="invite_text">Invite your friends to DOORISH and get ₹20 in your DOORISH wallet when they complete their first order.</string>
    <string name="keep_reffering_text">Keep referring to Keep earning.</string>
</resources>