<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_24px"
        android:title="@string/menu_home"
        app:showAsAction="always"/>

    <item
        android:id="@+id/nav_city"
        android:icon="@drawable/ic_subcategory"
        android:title="Categories"
        app:showAsAction="always"/>

    <item
        android:id="@+id/nav_slideshow"
        android:icon="@drawable/ic_orders"
        android:title="@string/my_orders"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_refer_and_earn"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/refer_and_earn"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_myprofile"
        android:icon="@drawable/ic_account_circle_18px"
        android:title="My Profile"
        app:showAsAction="ifRoom"/>



</menu>