<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReferAndEarn">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:text="@string/refer_and_earn_rewards"
            android:textColor="@color/black"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_welcome_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_welcome"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textAlignment="center"
            android:text="@string/invite_text"
            android:textColor="#808080"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_keep_refer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textAlignment="center"
            android:text="@string/keep_reffering_text"
            android:layout_below="@id/txt_welcome_body"
            android:textColor="#808080"
            android:textSize="20sp"/>

        <ImageView
            android:id="@+id/img_reward"
            android:layout_width="260dp"
            android:layout_height="260dp"
            android:layout_below="@id/txt_keep_refer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_reward" />

        <EditText
            android:id="@+id/txtReferralCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_reward"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/enter_referral_code" />

        <Button
            android:id="@+id/btnClaim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtReferralCode"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:text="@string/claim_reward" />

        <Button
            android:id="@+id/btnSkip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnClaim"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/skip" />


    </RelativeLayout>
</ScrollView>