<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IfUserNotActive">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/txt_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/your_account_is_disabled"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_centerHorizontal="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_welcome_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_welcome"
            android:layout_marginStart="24dp"
            android:layout_marginTop="6dp"
            android:layout_centerHorizontal="true"
            android:text="@string/sorry_we_can_t_reach_your_account"
            android:textColor="#808080"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/img_access_denied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_access_denied"
            android:layout_below="@+id/txt_welcome_body"
            android:layout_centerHorizontal="true"
            android:layout_margin="60dp"/>

        <Button
            android:id="@+id/btn_goto_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/img_access_denied"

            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/go_to_login_page" />


    </RelativeLayout>



</RelativeLayout>