<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/cardview_shadow_start_color"
        android:baselineAligned="false"
        android:elevation="10dp">

        <RelativeLayout
            android:id="@+id/base_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="6dp">

            <ImageView
                android:id="@+id/img_feedback"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_review_star" />

            <TextView
                android:id="@+id/txt_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@+id/img_feedback"
                android:text="@string/question"
                android:layout_toStartOf="@+id/btn_expand"
                android:textColor="@color/flat_black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_feedback_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_feedback_response"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="6dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="- Tarun at 19 Jul 2021"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txt_feedback_response"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_feedback"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/img_feedback"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_toStartOf="@+id/btn_expand"
                android:text="@string/answer"
                android:textColor="@color/flat_black"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/btn_expand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="18dp"
                android:background="@drawable/ic_arrow_down"
                android:backgroundTint="@color/flat_black"
                android:contentDescription="@string/expand_faq"
                android:textColor="@color/white"
                android:visibility="gone" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>